--- a/app/views/StoreManage/index.html
+++ b/app/views/StoreManage/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>login.html</title>
+    <title>index.html</title>
 	
     <meta http-equiv="keywords" content="keyword1,keyword2,keyword3">
     <meta http-equiv="description" content="this is my page">
@@ -12,6 +12,6 @@
   </head>
   
   <body>
-    This is my HTML page. <br>
+  ${id}
   </body>
 </html>
