--- a/app/views/StoreManage/index.html
+++ b/app/views/StoreManage/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="/public/stylesheets/main.css">
 <script src="/public/lib/jquerymobile/jquery.js"></script>
 <script src="/public/lib/jquerymobile/jquery.mobile-1.4.5.js"></script>
+<script src="/public/javascripts/custom.js"></script>
 </head>
 
 <body>
@@ -24,16 +25,22 @@
 			#{/else}
 				#{list items:store,as:'onestore'}
 			        <label for="store_${onestore.id}">${onestore.sName}</label>
-			        <input type="radio" name="store" id="store_${onestore.id}" value="${onestore.id}">
+			        #{if store.get(0)==onestore}
+			        <input type="radio" name="store" checked="checked" id="store_${onestore.id}" value="${onestore.id}" attrname="${onestore.sName}" attrdog="${onestore.dogId}">
+			        #{/if}
+			        #{else}
+			        <input type="radio" name="store" id="store_${onestore.id}" value="${onestore.id}" attrname="${onestore.sName}" attrdog="${onestore.dogId}">
+			        #{/else}
 				#{/list}
 		      </fieldset>
 		</div>
 		 <div data-role="popup" id="addStore" class="ui-content" style="min-width:250px;">
 		      <form method="post" id="addform">
 				 <div data-role="header" style="background-color: #191970" >
-					<h3 id="titlename" class="title_text_color">添加门店</h3>
+					<h3 id="storetitle" class="title_text_color">添加门店</h3>
 				</div>
 		        <div>
+		          <input type="hidden" name="us_id" id="us_id" value="-1">
 		          <input type="text" name="s_name" id="s_name" placeholder="请输入门店名称">
 		          <input type="text" name="dog_id" id="dog_id" placeholder="请输入加密狗号码">
 		          <input type="password" name="pswd" id="pswd" placeholder="请输入登录密码">
@@ -44,9 +51,9 @@
 		<div data-role="footer" style="text-align:center;" data-position="fixed">
 		  <div data-role="controlgroup" data-type="horizontal">
 		    <a href="#" class="ui-btn ui-icon-grid ui-btn-icon-left">门店报表</a>
-		    <a href="#addStore" data-rel="popup" class="ui-btn ui-icon-plus ui-btn-icon-left">新增</a>
-		    <a href="#" class="ui-btn ui-icon-delete ui-btn-icon-left">删除</a>
-		    <a href="#" class="ui-btn ui-icon-edit ui-btn-icon-left">修改</a>
+		    <a href="#" data-rel="popup" class="ui-btn ui-icon-plus ui-btn-icon-left" onclick="showAdd()">新增</a>
+		    <a href="#" data-rel="popup" class="ui-btn ui-icon-delete ui-btn-icon-left" onclick="showDelete()">删除</a>
+		    <a href="#" class="ui-btn ui-icon-edit ui-btn-icon-left" onclick="showUpdate()">修改</a>
 		  </div>
 		</div> 
 	</div>
