--- a/app/views/ShopManage/index.html
+++ b/app/views/ShopManage/index.html
@@ -1,17 +1,17 @@
 #{extends 'main.html' /}
 #{set 'title' }
-	用户管理-科室列表
+	代理商管理-代理商列表
 #{/set}
 #{set 'moreStyles'}
 
 #{/set}
 #{set 'moreScripts'}
-	<script type="text/javascript" src="@{'/public/js/department.js'}"></script>
+	<script type="text/javascript" src="@{'/public/javascripts/shopManage.js'}"></script>
 #{/set}
 
 #{set 'main_content'}
 	<!-- Main window -->
-    <div class="main_container" id="users_page">
+    <div class="main_container" id="orders_page">
 
 		<div class="row-fluid">
 		</div>
@@ -21,32 +21,28 @@
 			<div class="widget widget-padding span12">
 				<div class="widget-header">
 					<i class="icon-table"></i>
-					<h5>用户管理-科室列表</h5>
+					<h5>代理商管理-代理商列表</h5>
 					<div class="widget-buttons">
-						<a href="#" data-title="添加科室" data-toggle="modal" data-target="#addDept"><i class="icon-plus"></i> 添加科室</a>
+						<a href="#" data-title="添加代理商" data-toggle="modal" data-target="#addShop"><i class="icon-plus"></i> 添加代理商</a>
 					</div>
 				</div>
 				<div class="widget-body">
-					<table id="users" class="table table-striped table-bordered dataTable">
+					<table id="orders" class="table table-striped table-bordered dataTable">
 						<thead>
 							<tr>
 								<th class="hide">ID</th>
-								<th>名称</th>
-								<th>介绍</th>
-								<th>创建者</th>
-								<th style="width:80px;"></th>
+								<th>代理商名称</th>
+								<th style="width:90px;">操作</th>
 							</tr>
 						</thead>
-						<tbody id="DeptList">
-							#{list infoList,as:'info'}
+												<tbody id="UserList">
+							#{list shopList,as:'info'}
 							<tr>
 								<td class="hide">${info?.id}</td>
-								<td>${info?.name}</td>
-								<td>${info?.introduction}</td>
-								<td>${info?.create_user_name}</td>
+								<td>${info?.Shopname}</td>
 								<td>
-									<a href="#" onclick="loadDept('${info?.id}')" data-toggle="modal" data-target="#editDept"><i class="icon-edit"></i></a>
-									<a href="#" onclick="deleteDept('${info?.id}', this)"><i class="icon-trash"></i></a>
+									<a href="#" onclick="loadInfo('${info?.id}')" data-toggle="modal" data-target="#editShop" title="修改"><i class="icon-edit"></i></a>
+									<a href="#" onclick="deleteInfo('${info?.id}', this)" title="删除"><i class="icon-trash"></i></a>
 								</td>
 							</tr>
 							#{/list}
@@ -59,27 +55,20 @@
 		</div>
 		<!-- /row-fluid -->
 	</div>
-	
-	<!-- addDept modal -->
-    <div id="addDept" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<!-- addUser modal -->
+    <div id="addShop" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 	      <div class="modal-header">
 		        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-		        <h3>添加科室</h3>
+		        <h3>添加代理商</h3>
 	      </div>
 	      <div class="modal-body">
 	      	  <div class="widget-forms clearfix">
-	        	<form class="form-horizontal" id="form_add_dept">
+	        	<form class="form-horizontal" id="form_add_shop">
 	        	
                     <div class="control-group">
                        <label class="control-label">名称</label>
                        <div class="input-append">
-                      	   <input class="span4" type="text" name="dept.name" id="name_add">
-                       </div>
-                    </div>
-                    <div class="control-group">
-                       <label class="control-label">介绍</label>
-                       <div class="input-append">
-                      	   <input class="span4" type="text" name="dept.introduction">
+                      	   <input class="span4" type="text" name="shop.Shopname" id="name_add">
                        </div>
                     </div>
               </form>
@@ -90,15 +79,15 @@
 		        <button class="btn btn-primary" id="saveBtn">保存</button>
 	      </div>
     </div> 
-    <!-- editDept modal -->
-    <div id="editDept" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+         <!-- editUser modal -->
+    <div id="editShop" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 	      <div class="modal-header">
 		        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-		        <h3>编辑科室</h3>
+		        <h3>修改代理商</h3>
 	      </div>
 	      <div class="modal-body">
 	      	  <div class="widget-forms clearfix">
-	        	<form class="form-horizontal" id="form_update_dept">
+	        	<form class="form-horizontal" id="form_update_shop">
 	        		<div style="text-align: center;">
 	        			<img src="/public/images/loading.gif"/>
 	        		</div>
@@ -110,22 +99,22 @@
 		        <button class="btn btn-primary" id="updateBtn">保存</button>
 	      </div>
     </div> 
-    
     <script>
-    	function loadDept(id){
-    		$.get("/UserManage/editDepartmentPage",{id:id}, function(data){
-    			$("#form_update_dept").html(data);
+    	function loadInfo(orderId){
+    		$.get("/ShopManage/editPage",{id:orderId}, function(data){
+    			$("#form_update_shop").html(data);
     		});
     	}
-    	
-    	function deleteDept(id, $this){
-    		//console.log(id);
-    		//console.log($this);
-    		var r=confirm("确定删除此科室?");
+    	function deleteInfo(id, $this){
+    		var r=confirm("确定删除此用户?");
     		if(r){
-	    		$.post("/UserManage/deleteDept", {id:id}, function(data){
+	    		$.post("/delete_shop", {id:id}, function(data){
 	    			if(data){
-	    				location.reload();
+	    				if(data==-1){
+		    				alert("该代理商下有用户信息，不能删除!");
+	    				}else{
+		    				location.reload();
+	    				}
 	    			} else {
 	    				alert("删除失败!");
 	    			}
