--- a/app/views/UserManage/editUserPage.html
+++ b/app/views/UserManage/editUserPage.html
@@ -6,6 +6,23 @@
 	</div>
 </div>
 <div class="control-group">
+	<label class="control-label">密码</label>
+	<div class="input-append">
+		<input class="span4" type="password" name="user.u_pass" value="">
+	</div>
+</div>
+<div class="control-group">
+	<label class="control-label">代理商</label>
+	<div class="input-append">
+		<select class="span4" name="user.Shopid">
+			<option value="0"></option>
+			#{list shopList, as : 'shop'}
+				<option value="${shop.id}" ${info?.Shopid==shop.id?'selected':''}>${shop.Shopname}</option>
+			#{/list}
+		</select>
+	</div>
+</div>
+<div class="control-group">
 	<label class="control-label">年费</label>
 	<div class="input-append">
 		<input class="span4" type="text" name="user.Nf" value="${info?.Nf}">
