--- a/app/views/StoreManage/first.html
+++ b/app/views/StoreManage/first.html
@@ -7,17 +7,33 @@
 <link rel="stylesheet" href="/public/stylesheets/main.css">
 <script src="/public/lib/jquerymobile/jquery.js"></script>
 <script src="/public/lib/jquerymobile/jquery.mobile-1.4.5.js"></script>
+<script src="/public/javascripts/Chart.min.js"></script>
 <script src="/public/javascripts/custom.js"></script>
 </head>
-
 <body>
 	<div data-role="page" id="firstpage">
+<script>
+
+	$(document).ready(function(){
+		var ctx = $("#myChart").getContext("2d");
+		window.myLine = new Chart(ctx).Line(lineChartData, {
+			responsive: true
+		});
+	});
+
+
+	</script>
 		<div data-role="header" style="background-color: #191970" data-position="fixed">
 			<a href="#reportpage">返回</a>
 			<h1 id="titlename" class="title_text_color">门店营业概况</h1>
 		</div>
 		<div data-role="main" class="ui-content">
 		${s_id}
+		<div style="width:98%">
+			<div>
+				<canvas id="myChart" width="400" height="400"></canvas>
+			</div>
+		</div>
 		</div>
 	</div>
 </body>
