--- a/app/views/StoreManage/index.html
+++ b/app/views/StoreManage/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="/public/stylesheets/main.css">
 <script src="/public/lib/jquerymobile/jquery.js"></script>
 <script src="/public/lib/jquerymobile/jquery.mobile-1.4.5.js"></script>
+<script src="/public/javascripts/Chart.min.js"></script>
 <script src="/public/javascripts/custom.js"></script>
 </head>
 
@@ -65,7 +66,7 @@
 		  <div data-role="main" class="ui-content">
 		    <ul data-role="listview" data-inset="true">
 		      <li>
-		        <a href="#" onclick="check(1)">
+		        <a href="#" onclick="check(1)" data-ajax=“false”>
 		        <img src="/public/images/1.jpg">
 		        <h2>门店营业概况</h2>
 		        <p>包括营业汇总，交款及收银支付等信息</p>
