--- a/app/views/StoreManage/index.html
+++ b/app/views/StoreManage/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="/public/stylesheets/main.css">
 <script src="/public/lib/jquerymobile/jquery.js"></script>
 <script src="/public/lib/jquerymobile/jquery.mobile-1.4.5.js"></script>
-<script src="/public/javascripts/Chart.min.js"></script>
+<script src="/public/javascripts/Chart.js"></script>
 <script src="/public/javascripts/custom.js"></script>
 </head>
 
