--- a/app/views/StoreManage/second.html
+++ b/app/views/StoreManage/second.html
@@ -7,51 +7,33 @@
 <link rel="stylesheet" href="/public/stylesheets/main.css">
 <script src="/public/lib/jquerymobile/jquery.js"></script>
 <script src="/public/lib/jquerymobile/jquery.mobile-1.4.5.js"></script>
+<script src="/public/javascripts/Chart.js"></script>
 <script src="/public/javascripts/custom.js"></script>
-<script src="/public/javascripts/Chart.min.js"></script>
 </head>
 <body>
 	<div data-role="page" id="firstpage">
-	<script>
-	var randomScalingFactor = function(){ return Math.round(Math.random()*100)};
-
-	var barChartData = {
-		labels : ["January","February","March","April","May","June","July"],
-		datasets : [
-			{
-				fillColor : "rgba(220,220,220,0.5)",
-				strokeColor : "rgba(220,220,220,0.8)",
-				highlightFill: "rgba(220,220,220,0.75)",
-				highlightStroke: "rgba(220,220,220,1)",
-				data : [randomScalingFactor(),randomScalingFactor(),randomScalingFactor(),randomScalingFactor(),randomScalingFactor(),randomScalingFactor(),randomScalingFactor()]
-			},
-			{
-				fillColor : "rgba(151,187,205,0.5)",
-				strokeColor : "rgba(151,187,205,0.8)",
-				highlightFill : "rgba(151,187,205,0.75)",
-				highlightStroke : "rgba(151,187,205,1)",
-				data : [randomScalingFactor(),randomScalingFactor(),randomScalingFactor(),randomScalingFactor(),randomScalingFactor(),randomScalingFactor(),randomScalingFactor()]
-			}
-		]
-
-	}
-	window.onload = function(){
-		var ctx = document.getElementById("myChart2").getContext("2d");
-		window.myBar = new Chart(ctx).Bar(barChartData, {
-			responsive : true
+	<script type="text/javascript">
+	
+		$("#firstpage").on("pageshow",function(e){
+			var ctx = document.getElementById("lineChartCanvas").getContext("2d");
+			new Chart(ctx).Line(lineChartData,globalGraphSettings);
+		//	setTimeout(showLineChart,graphInitDelay);
 		});
-	}
-
+    // 启动
+    //setTimeout(function() {
+        // 避免IE7-8 调用getContext报错，使用setTimeout
+       // lineChart()
+       // barChart()
+    //}, 0)
 	</script>
 		<div data-role="header" style="background-color: #191970" data-position="fixed">
 			<a href="#reportpage">返回</a>
 			<h1 id="titlename" class="title_text_color">门店营业概况</h1>
 		</div>
 		<div data-role="main" class="ui-content">
-		${s_id}
 		<div style="width:98%">
 			<div>
-				<canvas id="myChart2" width="400" height="400"></canvas>
+				<canvas id="lineChartCanvas" width="400" height="400"></canvas>
 			</div>
 		</div>
 		</div>
