--- a/app/views/StoreManage/first.html
+++ b/app/views/StoreManage/first.html
@@ -10,21 +10,76 @@
 <script src="/public/javascripts/custom.js"></script>
 <link rel="stylesheet" href="/public/echarts_mobile/css/main.css">
     <script src="/public/echarts_mobile/js/jquery.min.js"></script>
-    <script src="/public/echarts_mobile/js/dist/echarts.js"></script>
 </head>
 <body>
 	<div data-role="page" id="firstpage">
-	<script type="text/javascript">
-	</script>
+    <script src="/public/echarts_mobile/js/dist/echarts.js"></script>
 		<div data-role="header" style="background-color: #191970" data-position="fixed">
 			<a href="#reportpage">返回</a>
 			<h1 id="titlename" class="title_text_color">门店营业概况</h1>
 		</div>
 		<div data-role="main" class="ui-content">
 			<div id="content">
-			    <section class="section">
-	            	<div class="main " optionKey="magicType"></div>
-	        	</section>
+	            <div id="showBar" class="show" style="width:400px;height:400px"></div>
+			<script type="text/javascript">
+			require.config({
+			    paths:{ 
+			        echarts: '/public/echarts_mobile/js/dist',
+			    }
+			});
+        // 使用
+        require(
+            [
+                'echarts',
+                'echarts/chart/bar' // 使用柱状图就加载bar模块，按需加载
+            ],
+            function (ec) {
+                // 基于准备好的dom，初始化echarts图表
+                var myChart = ec.init(document.getElementById('showBar')); 
+                
+                var option = {
+                    tooltip: {
+                        show: true
+                    },
+                    legend: {
+                        data:['销量']
+                    },
+                    xAxis : [
+                        {
+                            type : 'category',
+                            data : ["衬衫","羊毛衫","雪纺衫","裤子","高跟鞋","袜子"]
+                        }
+                    ],
+                    yAxis : [
+                        {
+                            type : 'value'
+                        }
+                    ],
+                    series : [
+                        {
+                            "name":"销量",
+                            "type":"bar",
+                            "data":[5, 20, 40, 10, 10, 20]
+                        }
+                    ]
+                };
+        
+                // 为echarts对象加载数据 
+                myChart.setOption(option); 
+				   resize();
+                 window.onresize = function(){
+				   resize();
+	            }
+	            function resize(){
+	            	var height = document.documentElement.clientHeight - 50 + 'px';
+				    var width = document.documentElement.clientWidth + 'px';
+				    $('#content').height(height).width(width);
+				    $('.show').height(document.documentElement.clientHeight - 65 + 'px').width(width);
+				    myChart && myChart.resize();
+	            }
+            }
+        );
+    </script>
 			</div>
 		</div>
 	</div>
