--- a/app/views/StoreManage/first.html
+++ b/app/views/StoreManage/first.html
@@ -31,7 +31,8 @@
         require(
             [
                 'echarts',
-                'echarts/chart/bar' // 使用柱状图就加载bar模块，按需加载
+                'echarts/chart/bar', // 使用柱状图就加载bar模块，按需加载
+                'echarts/chart/line' // 使用柱状图就加载bar模块，按需加载
             ],
             function (ec) {
                 // 基于准备好的dom，初始化echarts图表
@@ -42,7 +43,7 @@
                         show: true
                     },
                     legend: {
-                        data:['销量']
+                        data:['销量','销量2','销量3']
                     },
                     xAxis : [
                         {
@@ -58,6 +59,16 @@
                     series : [
                         {
                             "name":"销量",
+                            "type":"bar",
+                            "data":[5, 20, 40, 10, 10, 20]
+                        },
+                        {
+                            "name":"销量2",
+                            "type":"line",
+                            "data":[5, 20, 40, 10, 10, 20]
+                        },
+                        {
+                            "name":"销量3",
                             "type":"bar",
                             "data":[5, 20, 40, 10, 10, 20]
                         }
