--- a/app/views/StoreManage/first.html
+++ b/app/views/StoreManage/first.html
@@ -20,66 +20,55 @@
 		</div>
 		<div data-role="main" class="ui-content">
 			<div id="content">
-	            <div id="showBar" class="show" style="width:400px;height:400px"></div>
-			<script type="text/javascript">
-			require.config({
-			    paths:{ 
-			        echarts: '/public/echarts_mobile/js/dist',
-			    }
-			});
-        // 使用
-        require(
-            [
-                'echarts',
-                'echarts/chart/bar' // 使用柱状图就加载bar模块，按需加载
-            ],
-            function (ec) {
-                // 基于准备好的dom，初始化echarts图表
-                var myChart = ec.init(document.getElementById('showBar')); 
-                
-                var option = {
-                    tooltip: {
-                        show: true
-                    },
-                    legend: {
-                        data:['销量']
-                    },
-                    xAxis : [
-                        {
-                            type : 'category',
-                            data : ["衬衫","羊毛衫","雪纺衫","裤子","高跟鞋","袜子"]
-                        }
-                    ],
-                    yAxis : [
-                        {
-                            type : 'value'
-                        }
-                    ],
-                    series : [
-                        {
-                            "name":"销量",
-                            "type":"bar",
-                            "data":[5, 20, 40, 10, 10, 20]
-                        }
-                    ]
-                };
-        
-                // 为echarts对象加载数据 
-                myChart.setOption(option); 
-				   resize();
-                 window.onresize = function(){
-				   resize();
-	            }
-	            function resize(){
-	            	var height = document.documentElement.clientHeight - 50 + 'px';
-				    var width = document.documentElement.clientWidth + 'px';
-				    $('#content').height(height).width(width);
-				    $('.show').height(document.documentElement.clientHeight - 65 + 'px').width(width);
-				    myChart && myChart.resize();
-	            }
-            }
-        );
-    </script>
+				<table data-role="table" id="phone-table" data-mode="columntoggle"  class="phone-compare ui-shadow table-stroke">
+				  <thead>
+				    <tr>
+				      <th>类别</th>
+				      <th>项目</th>
+				      <th>数值</th>
+				    </tr>
+				  </thead>
+				  <tbody>
+				    <tr>
+				      <th class="label" rowspan="4">${strArray[0]}</th>
+				      <td>${strArray[1]}</td>
+				      <td>${strArray[2]}</td>
+				    </tr>
+				    <tr>
+				      <td>${strArray[3]}</td>
+				      <td>${strArray[4]}</td>
+				    </tr>
+				    <tr>
+				      <td>${strArray[5]}</td>
+				      <td>${strArray[6]}</td>
+				    </tr>
+				    <tr>
+				      <td>${strArray[7]}</td>
+				      <td>${strArray[8]}</td>
+				    </tr>
+				    <tr>
+				      <th class="label" rowspan="5">${strArray[9]}</th>
+				      <td>${strArray[10]}</td>
+				      <td>${strArray[11]}</td>
+				    </tr>
+				    <tr>
+				      <td>${strArray[12]}</td>
+				      <td>${strArray[13]}</td>
+				    </tr>
+				    <tr>
+				      <td>${strArray[14]}</td>
+				      <td>${strArray[15]}</td>
+				    </tr>
+				    <tr>
+				      <td>${strArray[16]}</td>
+				      <td>${strArray[17]}</td>
+				    </tr>
+				    <tr>
+				      <td>${strArray[18]}</td>
+				      <td>${strArray[19]}</td>
+				    </tr>
+				  </tbody>
+				</table>
 			</div>
 		</div>
 	</div>
