--- a/app/views/StoreManage/index.html
+++ b/app/views/StoreManage/index.html
@@ -28,10 +28,10 @@
 				#{list items:store,as:'onestore'}
 			        <label for="store_${onestore.id}">${onestore.sName}</label>
 			        #{if store.get(0)==onestore}
-			        <input type="radio" name="store" checked="checked" id="store_${onestore.id}" value="${onestore.id}" attrname="${onestore.sName}" attrdog="${onestore.dogId}">
+			        <input type="radio" name="store" checked="checked" id="store_${onestore.id}" value="${onestore.id}" attrname="${onestore.sName}" attrdog="${onestore.dogId}" attrdate="${onestore.expireddate}">
 			        #{/if}
 			        #{else}
-			        <input type="radio" name="store" id="store_${onestore.id}" value="${onestore.id}" attrname="${onestore.sName}" attrdog="${onestore.dogId}">
+			        <input type="radio" name="store" id="store_${onestore.id}" value="${onestore.id}" attrname="${onestore.sName}" attrdog="${onestore.dogId}" attrdate="${onestore.expireddate}" >
 			        #{/else}
 				#{/list}
 		      </fieldset>
@@ -44,7 +44,7 @@
 		        <div>
 		          <input type="hidden" name="us_id" id="us_id" value="-1">
 		          <input type="text" name="s_name" id="s_name" placeholder="请输入门店名称">
-		          <input type="text" name="dog_id" id="dog_id" placeholder="请输入加密狗号码">
+		          <input type="text" name="dog_id" id="dog_id" placeholder="请输入注册码">
 		          <input type="password" name="pswd" id="pswd" placeholder="请输入登录密码">
 		          <input type="button" id="addbtn" value="确定" data-rel="back" onclick="addStore()">
 		        </div>
@@ -66,43 +66,43 @@
 			</div>
 		  <div data-role="main" class="ui-content">
 		  	<div>
-			 	开始时间：<input data-role="none" style="width: 70%" class="Wdate" id="starttime" type="text" onClick="WdatePicker()" >
+			 	开始时间：<input value="${showtime}" data-role="none" style="width: 70%" class="Wdate" id="starttime" type="text" onClick="WdatePicker()" >
 		  	</div>
 		  	<div style="margin-top: 10px;">
-			 	结束时间：<input data-role="none" style="width: 70%" class="Wdate" id="endtime" type="text" onClick="WdatePicker()">
+			 	结束时间：<input value="${showtime}" data-role="none" style="width: 70%" class="Wdate" id="endtime" type="text" onClick="WdatePicker()">
 		  	</div>
 		    <ul data-role="listview" data-inset="true">
 		      <li>
 		        <a href="#" onclick="check(71)" data-ajax=“false”>
-		        <img src="/public/images/1.jpg">
+		        <img src="/public/images/8.jpg">
 		        <h2>门店营业概况</h2>
 		        <p>包括营业汇总，交款及收银支付等信息</p>
 		        </a>
 		      </li>
 		      <li>
 		        <a href="#" onclick="check(65)">
-		        <img src="/public/images/2.jpg">
+		        <img src="/public/images/8.jpg">
 		        <h2>大类销售统计</h2>
 		        <p>大类/小类-销售数量及金额分组统计</p>
 		        </a>
 		      </li>
 		      <li>
 		        <a href="#" onclick="check(66)">
-		        <img src="/public/images/3.jpg">
+		        <img src="/public/images/8.jpg">
 		        <h2>类别销售统计</h2>
 		        <p>大类、小类、数量、金额，文本样式</p>
 		        </a>
 		      </li>
 		      <li>
 		        <a href="#" onclick="check(70)">
-		        <img src="/public/images/9.jpg">
+		        <img src="/public/images/8.jpg">
 		        <h2>月营业走势</h2>
 		        <p>日期、客单数、来客数、销售额</p>
 		        </a>
 		      </li>
 		      <li>
 		        <a href="#" onclick="check(67)">
-		        <img src="/public/images/5.jpg">
+		        <img src="/public/images/8.jpg">
 		        <h2>付款方式统计</h2>
 		        <p>付款方式、金额，饼图</p>
 		        </a>
@@ -116,7 +116,7 @@
 		      </li>
 		      <li>
 		        <a href="#" onclick="check(69)">
-		        <img src="/public/images/7.jpg">
+		        <img  src="/public/images/8.jpg">
 		        <h2>门店销售排行</h2>
 		        <p>店名、客单数、销售金额</p>
 		        </a>
