--- a/app/views/ShopManage/index.html
+++ b/app/views/ShopManage/index.html
@@ -30,7 +30,7 @@
 					<table id="orders" class="table table-striped table-bordered dataTable">
 						<thead>
 							<tr>
-								<th class="hide">ID</th>
+								<th>ID</th>
 								<th>代理商名称</th>
 								<th style="width:90px;">操作</th>
 							</tr>
@@ -38,7 +38,7 @@
 												<tbody id="UserList">
 							#{list shopList,as:'info'}
 							<tr>
-								<td class="hide">${info?.id}</td>
+								<td>${info?.id}</td>
 								<td>${info?.Shopname}</td>
 								<td>
 									<a href="#" onclick="loadInfo('${info?.id}')" data-toggle="modal" data-target="#editShop" title="修改"><i class="icon-edit"></i></a>
