--- a/app/views/Login/index.html
+++ b/app/views/Login/index.html
@@ -32,6 +32,7 @@
 		<div data-role="main" class="ui-content">
 			<form  method="post" id="rform">
 				 <input type="text" name="rname" id="rname" placeholder="请输入用户名...">
+				 <input type="text" name="shopid" id="shopid" placeholder="请输入代理商ID..."> 
 				 <input type="password" name="rpass" id="rpass" placeholder="请输入密码..."> 
 				 <input type="password"	name="againpassword" id="againpassword" placeholder="请再次输入密码...">
 				 <input type="button" id="rbtn" value="注册" onclick="register()"> 
